fix bug (overflow)  in mobile menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,7 @@ section{
         position: absolute;
         top: 8vh;
         right: 0;
+        margin: 0;
         height: 92vh;
         width: 0;
         display: flex;
@@ -107,7 +108,7 @@ section{
         cursor: pointer;
     }
     .nav-list li{
-        opacity: 0;
+        display: none;
         
     }
     
